running to predict test

--- a/notebooks/5_Challenge2_Experiments2.ipynb
+++ b/notebooks/5_Challenge2_Experiments2.ipynb
@@ -3124,6 +3124,259 @@
       "Using VGG16_BN_Attention with configurations: num_classes='3', normalize_attn='False'\n",
       "\n",
       "Inference:   0%|          | 0/40 [00:00<?, ?it/s]\n",
+      "Inference:   2%|▎         | 1/40 [01:44<1:07:38, 104.06s/it]\n",
+      "Inference:   5%|▌         | 2/40 [01:44<27:27, 43.35s/it]   \n",
+      "Inference:   8%|▊         | 3/40 [01:45<14:43, 23.88s/it]\n",
+      "Inference:  10%|█         | 4/40 [01:46<08:50, 14.73s/it]\n",
+      "Inference:  12%|█▎        | 5/40 [01:47<05:39,  9.69s/it]\n",
+      "Inference:  15%|█▌        | 6/40 [01:47<03:47,  6.69s/it]\n",
+      "Inference:  18%|█▊        | 7/40 [01:48<02:37,  4.76s/it]\n",
+      "Inference:  20%|██        | 8/40 [01:49<01:51,  3.48s/it]\n",
+      "Inference:  22%|██▎       | 9/40 [01:50<01:21,  2.63s/it]\n",
+      "Inference:  25%|██▌       | 10/40 [01:50<01:01,  2.05s/it]\n",
+      "Inference:  28%|██▊       | 11/40 [01:51<00:47,  1.64s/it]\n",
+      "Inference:  30%|███       | 12/40 [01:52<00:37,  1.35s/it]\n",
+      "Inference:  32%|███▎      | 13/40 [01:53<00:31,  1.15s/it]\n",
+      "Inference:  35%|███▌      | 14/40 [01:53<00:26,  1.01s/it]\n",
+      "Inference:  38%|███▊      | 15/40 [01:54<00:22,  1.09it/s]\n",
+      "Inference:  40%|████      | 16/40 [01:55<00:20,  1.19it/s]\n",
+      "Inference:  42%|████▎     | 17/40 [01:55<00:18,  1.26it/s]\n",
+      "Inference:  45%|████▌     | 18/40 [01:56<00:16,  1.33it/s]\n",
+      "Inference:  48%|████▊     | 19/40 [01:57<00:15,  1.37it/s]\n",
+      "Inference:  50%|█████     | 20/40 [01:57<00:14,  1.41it/s]\n",
+      "Inference:  52%|█████▎    | 21/40 [01:58<00:13,  1.44it/s]\n",
+      "Inference:  55%|█████▌    | 22/40 [01:59<00:12,  1.46it/s]\n",
+      "Inference:  57%|█████▊    | 23/40 [01:59<00:11,  1.47it/s]\n",
+      "Inference:  60%|██████    | 24/40 [02:00<00:10,  1.49it/s]\n",
+      "Inference:  62%|██████▎   | 25/40 [02:01<00:10,  1.49it/s]\n",
+      "Inference:  65%|██████▌   | 26/40 [02:01<00:09,  1.50it/s]\n",
+      "Inference:  68%|██████▊   | 27/40 [02:02<00:08,  1.51it/s]\n",
+      "Inference:  70%|███████   | 28/40 [02:03<00:07,  1.51it/s]\n",
+      "Inference:  72%|███████▎  | 29/40 [02:03<00:07,  1.51it/s]\n",
+      "Inference:  75%|███████▌  | 30/40 [02:04<00:06,  1.52it/s]\n",
+      "Inference:  78%|███████▊  | 31/40 [02:05<00:05,  1.52it/s]\n",
+      "Inference:  80%|████████  | 32/40 [02:05<00:05,  1.52it/s]\n",
+      "Inference:  82%|████████▎ | 33/40 [02:06<00:04,  1.52it/s]\n",
+      "Inference:  85%|████████▌ | 34/40 [02:07<00:03,  1.52it/s]\n",
+      "Inference:  88%|████████▊ | 35/40 [02:07<00:03,  1.52it/s]\n",
+      "Inference:  90%|█████████ | 36/40 [02:08<00:02,  1.52it/s]\n",
+      "Inference:  92%|█████████▎| 37/40 [02:09<00:01,  1.52it/s]\n",
+      "Inference:  95%|█████████▌| 38/40 [02:09<00:01,  1.52it/s]\n",
+      "Inference:  98%|█████████▊| 39/40 [02:10<00:00,  1.52it/s]\n",
+      "Inference: 100%|██████████| 40/40 [02:12<00:00,  1.01it/s]\n",
+      "Inference: 100%|██████████| 40/40 [02:12<00:00,  3.30s/it]\n",
+      "all_predictions shape: (5, 1270)\n",
+      "all_probabilities shape: (5, 1270, 3)\n",
+      "Combination strategy is majority_vote. Computing the majority vote...\n",
+      "Average probabilities: [[0.0557933  0.6696652  0.2745414 ]\n",
+      " [0.0382046  0.9375885  0.02420693]\n",
+      " [0.02623783 0.89356565 0.08019648]\n",
+      " ...\n",
+      " [0.2611936  0.2302496  0.5085567 ]\n",
+      " [0.0099835  0.17312597 0.81689054]\n",
+      " [0.21899271 0.3619659  0.4190414 ]]\n",
+      "Results exported to: outputs/ClassifierSegExperimentCV_224_epo50_bs32_lr1e-05_s42/2023-12-29_0940_VGG16_BN_Attention/ch2_majority_vote_val_ClassifierSegExperimentCV_224_epo50_bs32_lr1e-05_s42_2023-12-29_0940_VGG16_BN_Attention.csv\n",
+      "Computing AUC scores for each class...\n",
+      "Figure(1500x600)\n",
+      "Majority vote AUC: 0.99811\n",
+      "Majority vote AUC Scores: [0.99789225 0.99870206 0.99773846]\n",
+      "Majority vote accuracy: 0.9755905511811024\n",
+      "Majority vote kappa: 0.9561797952905245\n",
+      "Target 0 - Precision: 0.98808, Recall: 0.97788, F-score: 0.98295, Sensitivity: 0.9778761061946902, Specificity: 0.9864864864864865, Support: 678\n",
+      "Target 1 - Precision: 0.97018, Recall: 0.97992, F-score: 0.97502, Sensitivity: 0.9799196787148594, Specificity: 0.9805699481865285, Support: 498\n",
+      "Target 2 - Precision: 0.91667, Recall: 0.93617, F-score: 0.92632, Sensitivity: 0.9361702127659575, Specificity: 0.9931972789115646, Support: 94\n",
+      "(   {   'accuracy': 0.9755905511811024,\n",
+      "        'auc': 0.9981109232924158,\n",
+      "        'auc_scores': [   0.9978922506577373,\n",
+      "                          0.9987020621345485,\n",
+      "                          0.9977384570849616],\n",
+      "        'fscore': [0.9829503335804298, 0.975024975024975, 0.9263157894736843],\n",
+      "        'kappa': 0.9561797952905245,\n",
+      "        'precision': [   0.9880774962742176,\n",
+      "                         0.9701789264413518,\n",
+      "                         0.9166666666666666],\n",
+      "        'recall': [0.9778761061946902, 0.9799196787148594, 0.9361702127659575],\n",
+      "        'sensitivity': [   0.9778761061946902,\n",
+      "                           0.9799196787148594,\n",
+      "                           0.9361702127659575],\n",
+      "        'specificity': [   0.9864864864864865,\n",
+      "                           0.9805699481865285,\n",
+      "                           0.9931972789115646],\n",
+      "        'support': [678, 498, 94]},)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Running inference on valid split for best results challenge 2 (ensemble) to see if everything is ok\n",
+    "command = 'python ../inference.py --test_path \"../datasets/challenge2/val\" \\\n",
+    "                    --experiment_name \"ClassifierSegExperimentCV\" \\\n",
+    "                    --network_name \"VGG16_BN_Attention\" \\\n",
+    "                    --max_epochs \"50\" \\\n",
+    "                    --base_lr \"0.00001\" \\\n",
+    "                    --batch_size \"32\" \\\n",
+    "                    --timeframe \"2023-12-29_0940\" \\\n",
+    "                    --verbose \"2\" \\\n",
+    "                    --multi \\\n",
+    "                    --ensemble \\\n",
+    "                    --report'\n",
+    "\n",
+    "# run the function to excute the command\n",
+    "_ = execute_cmd_realtime(command, log=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Excuting inference script...\n",
+      "Namespace(test_path='../datasets/challenge2/test', output='outputs', experiment_name='ClassifierSegExperimentCV', network_name='VGG16_BN_Attention', max_epochs=50, batch_size=32, base_lr=1e-05, img_size=224, seed=42, timeframe='2023-12-29_0940', verbose=2, multi=True, report=False, ensemble=True, combination_strategy='majority_vote', upscale_factor=8, gradcam=False)\n",
+      "Constructed output path: outputs/ClassifierSegExperimentCV_224_epo50_bs32_lr1e-05_s42/2023-12-29_0940_VGG16_BN_Attention. Searching for models...\n",
+      "Found 5 models.\n",
+      "Loading data with unknown class labels from ../datasets/challenge2/test path...\n",
+      "Dataset labels: {'testX': -911, 'testY': -922, 'testZ': -933} dictionary.\n",
+      "Loading the data from ../datasets/challenge2/test\n",
+      "Forcing n_classes to be based on the length of the labels dictionary...\n",
+      "Before: 1\n",
+      "After: 3\n",
+      "Dataset length: 2121\n",
+      "Using VGG16_BN_Attention with configurations: num_classes='3', normalize_attn='False'\n",
+      "Using VGG16_BN_Attention with configurations: num_classes='3', normalize_attn='False'\n",
+      "Using VGG16_BN_Attention with configurations: num_classes='3', normalize_attn='False'\n",
+      "Using VGG16_BN_Attention with configurations: num_classes='3', normalize_attn='False'\n",
+      "Using VGG16_BN_Attention with configurations: num_classes='3', normalize_attn='False'\n",
+      "\n",
+      "Inference:   0%|          | 0/67 [00:00<?, ?it/s]\n",
+      "Inference:   1%|▏         | 1/67 [01:48<1:58:59, 108.17s/it]\n",
+      "Inference:   3%|▎         | 2/67 [01:49<48:48, 45.05s/it]   \n",
+      "Inference:   4%|▍         | 3/67 [01:49<26:29, 24.84s/it]\n",
+      "Inference:   6%|▌         | 4/67 [01:50<16:07, 15.36s/it]\n",
+      "Inference:   7%|▋         | 5/67 [01:51<10:28, 10.14s/it]\n",
+      "Inference:   9%|▉         | 6/67 [01:52<07:05,  6.97s/it]\n",
+      "Inference:  10%|█         | 7/67 [01:53<04:57,  4.96s/it]\n",
+      "Inference:  12%|█▏        | 8/67 [01:53<03:34,  3.64s/it]\n",
+      "Inference:  13%|█▎        | 9/67 [01:54<02:39,  2.74s/it]\n",
+      "Inference:  15%|█▍        | 10/67 [01:55<02:01,  2.14s/it]\n",
+      "Inference:  16%|█▋        | 11/67 [01:56<01:35,  1.71s/it]\n",
+      "Inference:  18%|█▊        | 12/67 [01:57<01:17,  1.41s/it]\n",
+      "Inference:  19%|█▉        | 13/67 [01:57<01:04,  1.20s/it]\n",
+      "Inference:  21%|██        | 14/67 [01:58<00:56,  1.06s/it]\n",
+      "Inference:  22%|██▏       | 15/67 [01:59<00:49,  1.04it/s]\n",
+      "Inference:  24%|██▍       | 16/67 [01:59<00:45,  1.12it/s]\n",
+      "Inference:  25%|██▌       | 17/67 [02:00<00:41,  1.20it/s]\n",
+      "Inference:  27%|██▋       | 18/67 [02:01<00:38,  1.26it/s]\n",
+      "Inference:  28%|██▊       | 19/67 [02:02<00:36,  1.31it/s]\n",
+      "Inference:  30%|██▉       | 20/67 [02:02<00:35,  1.34it/s]\n",
+      "Inference:  31%|███▏      | 21/67 [02:03<00:33,  1.36it/s]\n",
+      "Inference:  33%|███▎      | 22/67 [02:04<00:32,  1.39it/s]\n",
+      "Inference:  34%|███▍      | 23/67 [02:04<00:31,  1.40it/s]\n",
+      "Inference:  36%|███▌      | 24/67 [02:05<00:30,  1.42it/s]\n",
+      "Inference:  37%|███▋      | 25/67 [02:06<00:29,  1.43it/s]\n",
+      "Inference:  39%|███▉      | 26/67 [02:06<00:28,  1.44it/s]\n",
+      "Inference:  40%|████      | 27/67 [02:07<00:27,  1.45it/s]\n",
+      "Inference:  42%|████▏     | 28/67 [02:08<00:26,  1.45it/s]\n",
+      "Inference:  43%|████▎     | 29/67 [02:08<00:26,  1.45it/s]\n",
+      "Inference:  45%|████▍     | 30/67 [02:09<00:25,  1.45it/s]\n",
+      "Inference:  46%|████▋     | 31/67 [02:10<00:24,  1.46it/s]\n",
+      "Inference:  48%|████▊     | 32/67 [02:10<00:23,  1.47it/s]\n",
+      "Inference:  49%|████▉     | 33/67 [02:11<00:23,  1.48it/s]\n",
+      "Inference:  51%|█████     | 34/67 [02:12<00:22,  1.48it/s]\n",
+      "Inference:  52%|█████▏    | 35/67 [02:12<00:21,  1.49it/s]\n",
+      "Inference:  54%|█████▎    | 36/67 [02:13<00:20,  1.49it/s]\n",
+      "Inference:  55%|█████▌    | 37/67 [02:14<00:20,  1.50it/s]\n",
+      "Inference:  57%|█████▋    | 38/67 [02:14<00:19,  1.51it/s]\n",
+      "Inference:  58%|█████▊    | 39/67 [02:15<00:18,  1.52it/s]\n",
+      "Inference:  60%|█████▉    | 40/67 [02:16<00:17,  1.52it/s]\n",
+      "Inference:  61%|██████    | 41/67 [02:16<00:17,  1.52it/s]\n",
+      "Inference:  63%|██████▎   | 42/67 [02:17<00:16,  1.52it/s]\n",
+      "Inference:  64%|██████▍   | 43/67 [02:18<00:15,  1.53it/s]\n",
+      "Inference:  66%|██████▌   | 44/67 [02:18<00:15,  1.52it/s]\n",
+      "Inference:  67%|██████▋   | 45/67 [02:19<00:14,  1.52it/s]\n",
+      "Inference:  69%|██████▊   | 46/67 [02:20<00:13,  1.51it/s]\n",
+      "Inference:  70%|███████   | 47/67 [02:20<00:13,  1.51it/s]\n",
+      "Inference:  72%|███████▏  | 48/67 [02:21<00:12,  1.51it/s]\n",
+      "Inference:  73%|███████▎  | 49/67 [02:22<00:11,  1.50it/s]\n",
+      "Inference:  75%|███████▍  | 50/67 [02:22<00:11,  1.51it/s]\n",
+      "Inference:  76%|███████▌  | 51/67 [02:23<00:10,  1.50it/s]\n",
+      "Inference:  78%|███████▊  | 52/67 [02:24<00:09,  1.50it/s]\n",
+      "Inference:  79%|███████▉  | 53/67 [02:24<00:09,  1.50it/s]\n",
+      "Inference:  81%|████████  | 54/67 [02:25<00:08,  1.51it/s]\n",
+      "Inference:  82%|████████▏ | 55/67 [02:26<00:07,  1.51it/s]\n",
+      "Inference:  84%|████████▎ | 56/67 [02:26<00:07,  1.51it/s]\n",
+      "Inference:  85%|████████▌ | 57/67 [02:27<00:06,  1.51it/s]\n",
+      "Inference:  87%|████████▋ | 58/67 [02:28<00:05,  1.51it/s]\n",
+      "Inference:  88%|████████▊ | 59/67 [02:28<00:05,  1.51it/s]\n",
+      "Inference:  90%|████████▉ | 60/67 [02:29<00:04,  1.51it/s]\n",
+      "Inference:  91%|█████████ | 61/67 [02:30<00:03,  1.52it/s]\n",
+      "Inference:  93%|█████████▎| 62/67 [02:30<00:03,  1.53it/s]\n",
+      "Inference:  94%|█████████▍| 63/67 [02:31<00:02,  1.53it/s]\n",
+      "Inference:  96%|█████████▌| 64/67 [02:32<00:01,  1.54it/s]\n",
+      "Inference:  97%|█████████▋| 65/67 [02:32<00:01,  1.54it/s]\n",
+      "Inference:  99%|█████████▊| 66/67 [02:33<00:00,  1.54it/s]\n",
+      "Inference: 100%|██████████| 67/67 [02:34<00:00,  1.30it/s]\n",
+      "Inference: 100%|██████████| 67/67 [02:34<00:00,  2.31s/it]\n",
+      "all_predictions shape: (5, 2121)\n",
+      "all_probabilities shape: (5, 2121, 3)\n",
+      "Combination strategy is majority_vote. Computing the majority vote...\n",
+      "Average probabilities: [[0.04856452 0.1000803  0.8513552 ]\n",
+      " [0.0403467  0.8111399  0.14851338]\n",
+      " [0.0374686  0.80985165 0.1526797 ]\n",
+      " ...\n",
+      " [0.27869728 0.40833527 0.31296745]\n",
+      " [0.78197736 0.06115351 0.15686914]\n",
+      " [0.15807287 0.6775602  0.1643669 ]]\n",
+      "Results exported to: outputs/ClassifierSegExperimentCV_224_epo50_bs32_lr1e-05_s42/2023-12-29_0940_VGG16_BN_Attention/ch2_majority_vote_test_ClassifierSegExperimentCV_224_epo50_bs32_lr1e-05_s42_2023-12-29_0940_VGG16_BN_Attention.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Running inference on test split for best results challenge 2 (ensemble)\n",
+    "# Majority Voting Ensemble\n",
+    "# Note that for ensuring that shuffle is False, we also exported the prediction filenames to the same csv file\n",
+    "# that filenames column has to be deleted manually before submission\n",
+    "command = 'python ../inference.py --test_path \"../datasets/challenge2/test\" \\\n",
+    "                    --experiment_name \"ClassifierSegExperimentCV\" \\\n",
+    "                    --network_name \"VGG16_BN_Attention\" \\\n",
+    "                    --max_epochs \"50\" \\\n",
+    "                    --base_lr \"0.00001\" \\\n",
+    "                    --batch_size \"32\" \\\n",
+    "                    --timeframe \"2023-12-29_0940\" \\\n",
+    "                    --verbose \"2\" \\\n",
+    "                    --multi \\\n",
+    "                    --ensemble'\n",
+    "\n",
+    "# run the function to excute the command\n",
+    "_ = execute_cmd_realtime(command, log=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Excuting inference script...\n",
+      "Namespace(test_path='../datasets/challenge2/val', output='outputs', experiment_name='ClassifierSegExperimentCV', network_name='VGG16_BN_Attention', max_epochs=50, batch_size=32, base_lr=1e-05, img_size=224, seed=42, timeframe='2023-12-29_0940', verbose=2, multi=True, report=True, ensemble=True, combination_strategy='majority_vote', upscale_factor=8, gradcam=False)\n",
+      "Constructed output path: outputs/ClassifierSegExperimentCV_224_epo50_bs32_lr1e-05_s42/2023-12-29_0940_VGG16_BN_Attention. Searching for models...\n",
+      "Found 5 models.\n",
+      "Loading data with 3 class labels from ../datasets/challenge2/val path...\n",
+      "Dataset labels: {'mel': 0, 'bcc': 1, 'scc': 2} dictionary.\n",
+      "Loading the data from ../datasets/challenge2/val\n",
+      "Dataset length: 1270\n",
+      "Using VGG16_BN_Attention with configurations: num_classes='3', normalize_attn='False'\n",
+      "Using VGG16_BN_Attention with configurations: num_classes='3', normalize_attn='False'\n",
+      "Using VGG16_BN_Attention with configurations: num_classes='3', normalize_attn='False'\n",
+      "Using VGG16_BN_Attention with configurations: num_classes='3', normalize_attn='False'\n",
+      "Using VGG16_BN_Attention with configurations: num_classes='3', normalize_attn='False'\n",
+      "\n",
+      "Inference:   0%|          | 0/40 [00:00<?, ?it/s]\n",
       "Inference:   2%|▎         | 1/40 [01:57<1:16:10, 117.20s/it]\n",
       "Inference:   5%|▌         | 2/40 [01:57<30:50, 48.69s/it]   \n",
       "Inference:   8%|▊         | 3/40 [01:58<16:31, 26.80s/it]\n",
@@ -3208,17 +3461,17 @@
    ],
    "source": [
     "# BEST RESULT CHALLENGE 2\n",
-    "command = 'python ../inference.py --test_path \"../datasets/challenge2/val\" \\\n",
-    "                    --experiment_name \"ClassifierSegExperimentCV\" \\\n",
-    "                    --network_name \"VGG16_BN_Attention\" \\\n",
-    "                    --max_epochs \"50\" \\\n",
-    "                    --base_lr \"0.00001\" \\\n",
-    "                    --batch_size \"32\" \\\n",
-    "                    --timeframe \"2023-12-29_0940\" \\\n",
-    "                    --verbose \"2\" \\\n",
-    "                    --multi \\\n",
-    "                    --ensemble \\\n",
-    "                    --report'\n",
+    "# command = 'python ../inference.py --test_path \"../datasets/challenge2/val\" \\\n",
+    "#                     --experiment_name \"ClassifierSegExperimentCV\" \\\n",
+    "#                     --network_name \"VGG16_BN_Attention\" \\\n",
+    "#                     --max_epochs \"50\" \\\n",
+    "#                     --base_lr \"0.00001\" \\\n",
+    "#                     --batch_size \"32\" \\\n",
+    "#                     --timeframe \"2023-12-29_0940\" \\\n",
+    "#                     --verbose \"2\" \\\n",
+    "#                     --multi \\\n",
+    "#                     --ensemble \\\n",
+    "#                     --report'\n",
     "\n",
     "# command = 'python ../inference.py --test_path \"../datasets/challenge2/val\" \\\n",
     "#                     --experiment_name \"ClassifierSegExperimentCV\" \\\n",
