--- a/notebooks/5_Challenge2_Experiments2.ipynb
+++ b/notebooks/5_Challenge2_Experiments2.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.path.append('../')\n",
@@ -3340,6 +3349,131 @@
     "# that filenames column has to be deleted manually before submission\n",
     "command = 'python ../inference.py --test_path \"../datasets/challenge2/test\" \\\n",
     "                    --experiment_name \"ClassifierSegExperimentCV\" \\\n",
+    "                    --network_name \"VGG16_BN_Attention\" \\\n",
+    "                    --max_epochs \"50\" \\\n",
+    "                    --base_lr \"0.00001\" \\\n",
+    "                    --batch_size \"32\" \\\n",
+    "                    --timeframe \"2023-12-29_0940\" \\\n",
+    "                    --verbose \"2\" \\\n",
+    "                    --multi \\\n",
+    "                    --ensemble'\n",
+    "\n",
+    "# run the function to excute the command\n",
+    "_ = execute_cmd_realtime(command, log=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Excuting inference script...\n",
+      "Namespace(test_path='../datasets/challenge2/test', output='outputs', experiment_name='BestK3', network_name='VGG16_BN_Attention', max_epochs=50, batch_size=32, base_lr=1e-05, img_size=224, seed=42, timeframe='2023-12-29_0940', verbose=2, multi=True, report=False, ensemble=True, combination_strategy='majority_vote', upscale_factor=8, gradcam=False)\n",
+      "Constructed output path: outputs/BestK3_224_epo50_bs32_lr1e-05_s42/2023-12-29_0940_VGG16_BN_Attention. Searching for models...\n",
+      "Found 3 models.\n",
+      "Loading data with unknown class labels from ../datasets/challenge2/test path...\n",
+      "Dataset labels: {'testX': -911, 'testY': -922, 'testZ': -933} dictionary.\n",
+      "Loading the data from ../datasets/challenge2/test\n",
+      "Forcing n_classes to be based on the length of the labels dictionary...\n",
+      "Before: 1\n",
+      "After: 3\n",
+      "Dataset length: 2121\n",
+      "Using VGG16_BN_Attention with configurations: num_classes='3', normalize_attn='False'\n",
+      "Using VGG16_BN_Attention with configurations: num_classes='3', normalize_attn='False'\n",
+      "Using VGG16_BN_Attention with configurations: num_classes='3', normalize_attn='False'\n",
+      "\n",
+      "Inference:   0%|          | 0/67 [00:00<?, ?it/s]\n",
+      "Inference:   1%|▏         | 1/67 [00:31<34:52, 31.70s/it]\n",
+      "Inference:   3%|▎         | 2/67 [00:32<14:24, 13.30s/it]\n",
+      "Inference:   4%|▍         | 3/67 [00:32<07:57,  7.46s/it]\n",
+      "Inference:   6%|▌         | 4/67 [00:33<04:56,  4.71s/it]\n",
+      "Inference:   7%|▋         | 5/67 [00:33<03:17,  3.19s/it]\n",
+      "Inference:   9%|▉         | 6/67 [00:34<02:18,  2.28s/it]\n",
+      "Inference:  10%|█         | 7/67 [00:34<01:41,  1.70s/it]\n",
+      "Inference:  12%|█▏        | 8/67 [00:35<01:17,  1.32s/it]\n",
+      "Inference:  13%|█▎        | 9/67 [00:35<01:01,  1.06s/it]\n",
+      "Inference:  15%|█▍        | 10/67 [00:36<00:50,  1.13it/s]\n",
+      "Inference:  16%|█▋        | 11/67 [00:36<00:42,  1.31it/s]\n",
+      "Inference:  18%|█▊        | 12/67 [00:37<00:37,  1.47it/s]\n",
+      "Inference:  19%|█▉        | 13/67 [00:37<00:33,  1.61it/s]\n",
+      "Inference:  21%|██        | 14/67 [00:38<00:30,  1.75it/s]\n",
+      "Inference:  22%|██▏       | 15/67 [00:38<00:27,  1.86it/s]\n",
+      "Inference:  24%|██▍       | 16/67 [00:38<00:26,  1.95it/s]\n",
+      "Inference:  25%|██▌       | 17/67 [00:39<00:24,  2.04it/s]\n",
+      "Inference:  27%|██▋       | 18/67 [00:39<00:23,  2.11it/s]\n",
+      "Inference:  28%|██▊       | 19/67 [00:40<00:22,  2.17it/s]\n",
+      "Inference:  30%|██▉       | 20/67 [00:40<00:21,  2.20it/s]\n",
+      "Inference:  31%|███▏      | 21/67 [00:41<00:20,  2.24it/s]\n",
+      "Inference:  33%|███▎      | 22/67 [00:41<00:19,  2.27it/s]\n",
+      "Inference:  34%|███▍      | 23/67 [00:41<00:19,  2.30it/s]\n",
+      "Inference:  36%|███▌      | 24/67 [00:42<00:18,  2.30it/s]\n",
+      "Inference:  37%|███▋      | 25/67 [00:42<00:18,  2.32it/s]\n",
+      "Inference:  39%|███▉      | 26/67 [00:43<00:17,  2.33it/s]\n",
+      "Inference:  40%|████      | 27/67 [00:43<00:17,  2.35it/s]\n",
+      "Inference:  42%|████▏     | 28/67 [00:44<00:16,  2.36it/s]\n",
+      "Inference:  43%|████▎     | 29/67 [00:44<00:16,  2.37it/s]\n",
+      "Inference:  45%|████▍     | 30/67 [00:44<00:15,  2.39it/s]\n",
+      "Inference:  46%|████▋     | 31/67 [00:45<00:15,  2.39it/s]\n",
+      "Inference:  48%|████▊     | 32/67 [00:45<00:14,  2.40it/s]\n",
+      "Inference:  49%|████▉     | 33/67 [00:46<00:14,  2.41it/s]\n",
+      "Inference:  51%|█████     | 34/67 [00:46<00:13,  2.42it/s]\n",
+      "Inference:  52%|█████▏    | 35/67 [00:46<00:13,  2.43it/s]\n",
+      "Inference:  54%|█████▎    | 36/67 [00:47<00:12,  2.42it/s]\n",
+      "Inference:  55%|█████▌    | 37/67 [00:47<00:12,  2.40it/s]\n",
+      "Inference:  57%|█████▋    | 38/67 [00:48<00:12,  2.40it/s]\n",
+      "Inference:  58%|█████▊    | 39/67 [00:48<00:11,  2.40it/s]\n",
+      "Inference:  60%|█████▉    | 40/67 [00:49<00:11,  2.41it/s]\n",
+      "Inference:  61%|██████    | 41/67 [00:49<00:10,  2.42it/s]\n",
+      "Inference:  63%|██████▎   | 42/67 [00:49<00:10,  2.40it/s]\n",
+      "Inference:  64%|██████▍   | 43/67 [00:50<00:09,  2.43it/s]\n",
+      "Inference:  66%|██████▌   | 44/67 [00:50<00:09,  2.44it/s]\n",
+      "Inference:  67%|██████▋   | 45/67 [00:51<00:08,  2.45it/s]\n",
+      "Inference:  69%|██████▊   | 46/67 [00:51<00:08,  2.46it/s]\n",
+      "Inference:  70%|███████   | 47/67 [00:51<00:08,  2.46it/s]\n",
+      "Inference:  72%|███████▏  | 48/67 [00:52<00:07,  2.47it/s]\n",
+      "Inference:  73%|███████▎  | 49/67 [00:52<00:07,  2.48it/s]\n",
+      "Inference:  75%|███████▍  | 50/67 [00:53<00:06,  2.48it/s]\n",
+      "Inference:  76%|███████▌  | 51/67 [00:53<00:06,  2.48it/s]\n",
+      "Inference:  78%|███████▊  | 52/67 [00:53<00:06,  2.48it/s]\n",
+      "Inference:  79%|███████▉  | 53/67 [00:54<00:05,  2.50it/s]\n",
+      "Inference:  81%|████████  | 54/67 [00:54<00:05,  2.50it/s]\n",
+      "Inference:  82%|████████▏ | 55/67 [00:55<00:04,  2.47it/s]\n",
+      "Inference:  84%|████████▎ | 56/67 [00:55<00:04,  2.47it/s]\n",
+      "Inference:  85%|████████▌ | 57/67 [00:55<00:04,  2.49it/s]\n",
+      "Inference:  87%|████████▋ | 58/67 [00:56<00:03,  2.48it/s]\n",
+      "Inference:  88%|████████▊ | 59/67 [00:56<00:03,  2.48it/s]\n",
+      "Inference:  90%|████████▉ | 60/67 [00:57<00:02,  2.48it/s]\n",
+      "Inference:  91%|█████████ | 61/67 [00:57<00:02,  2.48it/s]\n",
+      "Inference:  93%|█████████▎| 62/67 [00:57<00:02,  2.50it/s]\n",
+      "Inference:  94%|█████████▍| 63/67 [00:58<00:01,  2.51it/s]\n",
+      "Inference:  96%|█████████▌| 64/67 [00:58<00:01,  2.52it/s]\n",
+      "Inference:  97%|█████████▋| 65/67 [00:59<00:00,  2.53it/s]\n",
+      "Inference:  99%|█████████▊| 66/67 [00:59<00:00,  2.55it/s]\n",
+      "Inference: 100%|██████████| 67/67 [01:00<00:00,  1.98it/s]\n",
+      "Inference: 100%|██████████| 67/67 [01:00<00:00,  1.11it/s]\n",
+      "all_predictions shape: (3, 2121)\n",
+      "all_probabilities shape: (3, 2121, 3)\n",
+      "Combination strategy is majority_vote. Computing the majority vote...\n",
+      "Average probabilities: [[0.02999242 0.07420763 0.89579993]\n",
+      " [0.03994111 0.7840274  0.17603149]\n",
+      " [0.03668012 0.76562744 0.19769238]\n",
+      " ...\n",
+      " [0.27264452 0.40111208 0.32624343]\n",
+      " [0.7947905  0.05705102 0.14815848]\n",
+      " [0.17636561 0.6478038  0.17583056]]\n",
+      "Results exported to: outputs/BestK3_224_epo50_bs32_lr1e-05_s42/2023-12-29_0940_VGG16_BN_Attention/ch2_majority_vote_test_BestK3_224_epo50_bs32_lr1e-05_s42_2023-12-29_0940_VGG16_BN_Attention.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Inferencing only the best 3 folds models from the baseline in the same folder << on the test set >>\n",
+    "# BEST 3 FOLDS CHALLENGE 2 <<SUBMISSION>>\n",
+    "command = 'python ../inference.py --test_path \"../datasets/challenge2/test\" \\\n",
+    "                    --experiment_name \"BestK3\" \\\n",
     "                    --network_name \"VGG16_BN_Attention\" \\\n",
     "                    --max_epochs \"50\" \\\n",
     "                    --base_lr \"0.00001\" \\\n",
